--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
- 
 <header class="navigation-wrap bg-light start-header start-style" id="header">
     <div class="header-top">
         <div class="container">
@@ -19,13 +18,13 @@
         <div class="row">
             <div class="col-12">
                 <nav class="navbar navbar-expand-md navbar-light">
-                    <a class="navbar-brand" href="https://themeforest.net/user/ig_design/portfolio" target="_blank"><img src="assets/images/logo.png" alt=""></a>
+                    <a class="navbar-brand"  [routerLink]="['/']"><img src="assets/images/logo.png" alt=""></a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse" id="mainnav"> 
                         <ul class="navbar-nav ml-auto py-4 py-md-0">
-                         
+                        
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 menu-active">
                                 <a class="nav-link" href="#home">Home</a>
                             </li>
@@ -41,6 +40,9 @@
                             <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                 <a class="nav-link" href="#contact">Contact</a>
                             </li>
+                            <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                <a class="nav-link" [routerLink]="['/blog']" onclick="window.scrollTo(0, 0)">Blog</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="navbar-right" >
@@ -50,13 +52,13 @@
             </div>
         </div>
     </div>
-</header> 
-
+  </header> 
 <section class="banner-area " id="home"> 
     <div class="container ">
         <div class="row fullscreen d-flex align-items-center"> 
             <div class=" col-lg-11 " id="pc-wrapper">
                 <header> 
+                    
                     <h1>Make Things Easier with the hottest Inventory Software In The Market</h1>  
                 </header>
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
@@ -439,7 +441,7 @@
                             </select>
                         </div>
                         <div class="col-sm-5 wow fadeInRight">
-                        <br/>
+                        <br/    ``!b>
                             <span id="offline">To determine the resources that is needed please select the size that best describe your business.</span>
                         </div>
                     </div>
@@ -609,8 +611,7 @@
     
 </ng-template>
 
-
 <footer class="footer-area section-gap text-center">
     <p>&copy; Copryright 2019 - Product by <a target="__blank" href="https://algermakiputin.github.io/portfolio/">Alger Makiputin</a>. All Rights Reserved | <a href="#top">Back to Top</a></p>
-</footer>
+  </footer>
 
