--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -516,6 +516,19 @@ textarea.is-invalid
     font-size: 14.5px;
 }
 
+ul {
+	list-style-type: disc !important;
+	margin-left:15px;
+}
+
+ol {
+	list-style-type: decimal;
+	margin-left:15px;
+}
+
+ul li {
+	margin-bottom: 10px;
+}
 
 .nav-item.menu-active:after { 
 	bottom:0 !important;
