--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-12">
                 <nav class="navbar navbar-expand-md navbar-light">
-                    <a class="navbar-brand" href="#home" target="_blank"><img src="assets/images/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="/" ><img src="assets/images/logo.png" alt=""></a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
