--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -407,8 +407,8 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/kareen.jpg">
-                                            <a title="" href="javascript:void(0)">Kareen Avorque</a>
-                                            <i>Manila City</i>
+                                            <a title="" href="javascript:void(0)">Kareen Flores</a>
+                                            <i>Metro Manila</i>
                                         </div>
                                     </div>
                                 </div>
@@ -424,9 +424,161 @@
 
 <section id="pricing">
     <header class="container">
-        <h2 class="text-center section-header wow fadeIn">Pricing Calculator</h2>
+        <h2 class="text-center section-header wow fadeIn">Software Pricing</h2>
     </header>
-    <form class="container">
+    <div id="generic_price_table">
+        <section> 
+            <div class="container">
+                
+                <!--BLOCK ROW START-->
+                <div class="row">
+                    <div class="col-md-4">
+                    
+                        <!--PRICE CONTENT START-->
+                        <div class="generic_content clearfix">
+                            
+                            <!--HEAD PRICE DETAIL START-->
+                            <div class="generic_head_price clearfix">
+                            
+                                <!--HEAD CONTENT START-->
+                                <div class="generic_head_content clearfix">
+                                
+                                    <!--HEAD START-->
+                                    <div class="head_bg"></div>
+                                    <div class="head">
+                                        <span>Bronze</span>
+                                    </div>
+                                    <!--//HEAD END-->
+                                    
+                                </div>
+                                <!--//HEAD CONTENT END-->
+                                
+                                <!--PRICE START-->
+                                <div class="generic_price_tag clearfix">    
+                                    <span class="price">
+                                        <span class="sign">₱</span>
+                                        <span class="currency">5,999</span>
+                                        <span class="cent">.00</span> 
+                                    </span>
+                                </div>
+                                <!--//PRICE END-->
+                                
+                            </div>                            
+                            <!--//HEAD PRICE DETAIL END-->
+                            
+                            <!--FEATURE LIST START-->
+                            <div class="generic_feature_list">
+                                <ul>
+                                    <li>Up to <span>200</span> Products</li>
+                                    <li><span>200</span> Customers</li>
+                                    <li><span>15</span> Categories</li>
+                                    <li><span>Barcode Support</span> No</li>
+                                    <li><span>Advance Pricing Support</span> No</li>
+                                    <li><span>Database Backup</span> No</li>
+                                    <li><span>Advance Features</span> No</li>
+                                    <li><span>Support</span> YES</li>
+                                </ul>
+                            </div> 
+                            <div class="generic_price_btn clearfix"> 
+                               
+                                <a class="" href="https://m.me/poslitesoftware" target="__blank">Sign up</a>
+                                
+                            </div> 
+                            
+                        </div> 
+                            
+                    </div>
+                    
+                    <div class="col-md-4">
+                     
+                        <div class="generic_content active clearfix">
+                             
+                            <div class="generic_head_price clearfix">
+                             
+                                <div class="generic_head_content clearfix">
+                                 
+                                    <div class="head_bg"></div>
+                                    <div class="head">
+                                        <span>silver</span>
+                                    </div> 
+                                </div> 
+                                <div class="generic_price_tag clearfix">    
+                                    <span class="price">
+                                        <span class="sign">₱</span>
+                                        <span class="currency">15,999</span>
+                                        <span class="cent">.00</span> 
+                                    </span>
+                                </div> 
+                                
+                            </div>                         
+                            <div class="generic_feature_list">
+                                <ul>
+                                    <li>Up to <span>2000</span> Products</li>
+                                    <li><span>2000</span> Customers</li>
+                                    <li><span>50</span> Categories</li>
+                                    <li><span>Barcode Support</span> YES</li>
+                                    <li><span>Advance Pricing Support</span> YES</li>
+                                    <li><span>Database Backup</span> YES</li>
+                                    <li><span>Advance Features</span> YES</li>
+                                    <li><span>Support</span> YES</li>
+                                </ul>
+                            </div> 
+                            <div class="generic_price_btn clearfix"> 
+                                 
+                                <a class="" href="https://m.me/poslitesoftware" target="__blank">Sign up</a>
+                             
+                            </div> 
+                            
+                        </div> 
+                            
+                    </div>
+                    <div class="col-md-4">
+                     
+                        <div class="generic_content clearfix">
+                             
+                            <div class="generic_head_price clearfix">
+                             
+                                <div class="generic_head_content clearfix ">
+                                 
+                                    <div class="head_bg gold"></div>
+                                    <div class="head">
+                                        <span>Gold</span>
+                                    </div> 
+                                </div> 
+                                <div class="generic_price_tag clearfix">    
+                                    <span class="price">
+                                        <span class="sign">₱</span>
+                                        <span class="currency">28,999</span>
+                                        <span class="cent">.99</span> 
+                                    </span>
+                                </div> 
+                                
+                            </div>                       
+                            <div class="generic_feature_list">
+                                <ul>
+                                    <li><span>Unlimited</span> Products</li>
+                                    <li><span>Unlimited</span> Customers</li>
+                                    <li><span>Unlimited</span> Categories</li>
+                                    <li><span>Barcode Support</span> YES</li>
+                                    <li><span>Advance Pricing Support</span> YES</li>
+                                    <li><span>Database Backup</span> YES</li>
+                                    <li><span>Advance Features</span> YES</li>
+                                    <li><span>Support</span> YES</li>
+                                </ul>
+                            </div> 
+                            <div class="generic_price_btn clearfix"> 
+                                 
+                                <a class="" href="https://m.me/poslitesoftware" target="__blank">Sign up</a> 
+                            </div> 
+                        </div> 
+                            
+                    </div>
+                </div>   
+                
+            </div>
+        </section>   
+    </div>
+    <!-- <form class="container">
         <div class="row"> 
             <div class="col-sm-10 mx-auto ">
 
@@ -509,7 +661,7 @@
                 </div>
             </div> 
         </div>
-    </form>
+    </form> -->
 </section>
 
 <section id="divider" class="well" style="margin-bottom: 80px; background: #333;background-image: url('./assets/images/divider.jpeg');background-position-y:75%; 
@@ -518,7 +670,7 @@
         <div class="wow zoomIn" data-wow-delay="0.5s">
             <header class="container text-center">
                 <h2 class="section-header">MORE THAN 100 STORE USE POSLITE</h2>
-                <p class="lead">Number of happy POSLite users in different part of Philippines</p>
+                <p class="lead">Number of happy POSLite users in different regions of the Philippines</p>
             </header>
             <div class="container">
                 <div id="counter">
