--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,57 +1,52 @@
- 
-<div class="login_form">
-    <form name="signupForm" novalidate> 
-        <a routerLink="/"><img src="assets/images/logo.png" alt=""></a>
-        <h2>Sign Up</h2>
-        <br>
-        <br>
-        <div class="form-group">
-            <label>First Name*</label>
-            <input 
-                autocomplete="fname" 
-                type="text" 
-                ng-model="signup.fname" 
-                class="form-control" 
-                name="fname"
-                ng-required="true"
-                >
+<!-- Just an image -->
+<nav class="navbar ">
+    <div class="container">
+        <a class="navbar-brand" routerLink="/">
+            <img src="assets/images/logo.png" width="30" height="30" alt="">
+          </a>
+    </div>
+</nav>
+
+<div class="main-wrapper">
+    <div class="main-w3layouts wrapper">
+        <h1>Sign Up Free Trial</h1>
+        <div class="main-agileinfo">
+            <div class="agileits-top">
+                <form action="#" method="post">
+                    <input class="text" type="text" name="Username" placeholder="Username" required="">
+                    <input class="text email" type="email" name="email" placeholder="Email" required="">
+                    <input class="text" type="password" name="password" placeholder="Password" required="">
+                    <input class="text w3lpass" type="password" name="password" placeholder="Confirm Password" required="">
+                    <div class="wthree-text">
+                        <label class="anim">
+                            <input type="checkbox" class="checkbox" required="">
+                            <span>I Agree To The Terms & Conditions</span>
+                        </label>
+                        <div class="clear"> </div>
+                    </div>
+                    <input type="submit" value="SIGNUP">
+                </form>
+                <p>Don't have an Account? <a href="#"> Login Now!</a></p>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Last Name*</label>
-            <input 
-                autocomplete="lname" 
-                type="text" 
-                class="form-control"
-                ng-model="signup.lname" 
-                name="lname"
-                ng-required="true"
-                >
+    
+        <div class="colorlibcopy-agile">
+            <p>© 2020 POSLite. All rights reserved</p>
         </div>
-        <div class="form-group">
-            <label>Email Address*</label>
-            <input 
-                type="text" 
-                autocomplete="email" 
-                class="form-control" 
-                name="email"
-                ng-model="signup.email" 
-                ng-required="true"
-                >
-        </div>
-        <div class="form-group">
-            <label>Contact Number*</label>
-            <input 
-                type="text" 
-                autocomplete="number" 
-                class="form-control" 
-                name="number"
-                ng-model="signup.number" 
-                ng-required="true"
-                >
-        </div> 
-        <div class="form-group">
-            <button class="btn btn-primary" type="submit">Sign up</button>
-        </div>
-    </form>
+        
+        <ul class="colorlib-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
 </div>
+ 
   
